Switched from type data list to a type data storage class.